Added chatbot files
Signed-off-by: SanthoshToorpu <toorpusanthosh@gmail.com>

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -53,3 +53,17 @@
   {{ end }}
 </ul>
 {{ end }}
+
+<!-- Chatbot CSS and JS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/themes/prism-tomorrow.min.css">
+
+<!-- Prism JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
+
+<!-- CSS -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/SanthoshToorpu/docs-agent@main/docs_styles/chatbot.css?_={{ now.Unix }}">
+
+<!-- JS -->
+<script src="https://cdn.jsdelivr.net/gh/SanthoshToorpu/docs-agent@main/docs_scripts/chatbot.js?_={{ now.Unix }}"></script>
