--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -62,8 +62,8 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/components/prism-core.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/prism/1.29.0/plugins/autoloader/prism-autoloader.min.js"></script>
 
-<!-- CSS -->
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/SanthoshToorpu/docs-agent@main/docs_styles/chatbot.css?_={{ now.Unix }}">
+<!-- Local Chatbot CSS -->
+<link rel="stylesheet" href="{{ "css/chatbot.css" | relURL }}">
 
-<!-- JS -->
-<script src="https://cdn.jsdelivr.net/gh/SanthoshToorpu/docs-agent@main/docs_scripts/chatbot.js?_={{ now.Unix }}"></script>
+<!-- Local Chatbot JS -->
+<script src="{{ "js/chatbot.js" | relURL }}"></script>
